objects/maps__LiveAssetDailySummaryEvent__c.object
<CustomObject>
    <fields>
        <fullName>maps__AlertSent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes if this event was included in a previous email alert</description>
        <inlineHelpText>Denotes if this event was included in a previous email alert</inlineHelpText>
        <label>Alert Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>maps__AverageSpeed_kph__c</fullName>
        <inlineHelpText>Average speed over the course of the event, in kilometers per hour</inlineHelpText>
        <label>Average Speed (kph)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__AverageSpeed_mph__c</fullName>
        <description>Average speed over the course of the event, in miles per hour</description>
        <formula>ROUND(maps__AverageSpeed_kph__c * 0.62137, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average speed over the course of the event, in miles per hour</inlineHelpText>
        <label>Average Speed (mph)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__City__c</fullName>
        <description>Maps Live City address field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>City of event location (when available)</inlineHelpText>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Country__c</fullName>
        <description>Maps Live Country address field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Country of event location (when available)</inlineHelpText>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__EndUnixTimeStamp__c</fullName>
        <label>End Unix Time Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__EventEnded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Timestamp of event end</inlineHelpText>
        <label>Event Ended</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__EventOccuredAMorPM__c</fullName>
        <description>AM/PM is determined based on the Timezone of the device.</description>
        <inlineHelpText>AM/PM is determined based on the Timezone of the device.</inlineHelpText>
        <label>Event Occurred in AM or PM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>AM/PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__EventStarted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Timestamp of event start</inlineHelpText>
        <label>Event Started</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>maps__EventType__c</fullName>
        <inlineHelpText>Type of summary event represented by this record</inlineHelpText>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stop</fullName>
                </value>
                <value>
                    <fullName>Speeding</fullName>
                </value>
                <value>
                    <fullName>Hard Acceleration</fullName>
                </value>
                <value>
                    <fullName>Hard Braking</fullName>
                </value>
                <value>
                    <fullName>Speed Threshold</fullName>
                </value>
                <value>
                    <fullName>First Message of Day</fullName>
                </value>
                <value>
                    <fullName>Last Message of Day</fullName>
                </value>
                <value>
                    <fullName>First Motion</fullName>
                </value>
                <value>
                    <fullName>Last Motion</fullName>
                </value>
                <value>
                    <fullName>Live App Toggle On</fullName>
                </value>
                <value>
                    <fullName>Live App Toggle Off</fullName>
                </value>
                <value>
                    <fullName>Device Battery On</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>maps__Full_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This is the full address of where the event occurred</inlineHelpText>
        <label>Full Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>maps__LiveAssetDailySummary__c</fullName>
        <description>Live Asset Daily Summary record to which this event relates</description>
        <inlineHelpText>Live Asset Daily Summary record to which this event relates</inlineHelpText>
        <label>Live Asset Daily Summary</label>
        <referenceTo>maps__LiveAssetDailySummary__c</referenceTo>
        <relationshipLabel>Live Asset Daily Summary Events</relationshipLabel>
        <relationshipName>LiveAssetDailySummaryEvents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>maps__LiveDailyDriveTrip__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Live Daily Drive Trip</label>
        <referenceTo>maps__LiveDailyDriveTrip__c</referenceTo>
        <relationshipLabel>Live Asset Daily Summary Events</relationshipLabel>
        <relationshipName>LiveAssetDailySummaryEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>maps__Number_of_Associations__c</fullName>
        <label>Number of Associations</label>
        <summaryForeignKey>maps__LiveEventAssociation__c.maps__LiveAssetDailySummaryEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>maps__OdometerKm__c</fullName>
        <inlineHelpText>Odometer value (km) captured at the time of event</inlineHelpText>
        <label>Odometer (km)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__OdometerMiles__c</fullName>
        <description>Odometer value (mi) captured at the time of event</description>
        <formula>ROUND(maps__OdometerKm__c * 0.62137, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Odometer value (mi) captured at the time of event</inlineHelpText>
        <label>Odometer (mi)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Order__c</fullName>
        <label>Stop Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__Position__c</fullName>
        <inlineHelpText>Asset location at start of event</inlineHelpText>
        <label>Position</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>maps__PostalCode__c</fullName>
        <description>Maps Live Postal Code address field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Postal Code of event location (when available)</inlineHelpText>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__PostedSpeedLimit_KPH__c</fullName>
        <inlineHelpText>Posted speed limit where event occurs, when available, in kilometers per hour</inlineHelpText>
        <label>Posted Speed Limit (kph)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__PostedSpeedLimit_MPH__c</fullName>
        <description>This is the posted speed limit of where the event took place.</description>
        <formula>ROUND(maps__PostedSpeedLimit_KPH__c * 0.62137, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Posted speed limit where event occurs, when available, in miles per hour</inlineHelpText>
        <label>Posted Speed Limit (mph)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__StartUnixTimeStamp__c</fullName>
        <label>Start Unix Time Stamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__State__c</fullName>
        <description>Maps Live State address field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>State of event location (when available)</inlineHelpText>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__Street_Address__c</fullName>
        <description>Maps Live Street Address field</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Street address of event location (when available)</inlineHelpText>
        <label>Street Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>maps__TotalEventTimeHours__c</fullName>
        <inlineHelpText>Duration of a stop event in hours. (only available for Stop events)</inlineHelpText>
        <label>Event Duration (Hours)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>maps__TotalEventTimeMinutes__c</fullName>
        <inlineHelpText>Duration of a stop event in minutes. (only available for Stop events)</inlineHelpText>
        <label>Event Duration (Minutes)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Maps Live Asset Daily Summary Event</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Maps Live Asset Daily Summary Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Maps Live Asset Daily Summary Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>